# pycon2025

./: README.md
createdquery/: README.md  createdquery.py  createdquery_test.py
dupfdquery/: README.md  dupfdquery.py
procmapquery/: README.md  procmapquery.py
procmapquery-cffi/: .gitignore  README.md  hatch_build.py  pyproject.toml
procmapquery-cffi/src/procmapquery_cffi/: __init__.py
